# ff-studio

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: linux-build.yml  macos-build.yml  release.yml  rust.yml  windows-build.yml
debian/: copyright  metainfo.xml
flatpak/: com.fai.ffstudio.desktop  com.fai.ffstudio.metainfo.xml  com.fai.ffstudio.yml
src/: index.html
src-tauri/: Cargo.toml  ffstudio.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  tray_manager.rs  watch_queue.rs
src-tauri/src/commands/: file_ops.rs  media_ops.rs  mod.rs  workflow_ops.rs
src-tauri/src/ffmpeg/: executor.rs  mod.rs  parser.rs  version.rs
src-tauri/src/server/: file_server.rs  mod.rs  port.rs
src-tauri/src/utils/: filesystem.rs  hash.rs  mod.rs  version.rs
src-tauri/src/workflow/: manager.rs  types.rs
src/libs/litegraph/: litegraph.css  litegraph.js
src/modules/: main.js
src/modules/core/: format.js  server-port.js
src/modules/graph/: clipboard.js  constants.js  core.js  execution.js  graph.js  import_export.js  nodes.js  parser.js  undo_redo.js  utils.js
src/modules/help/: help-cards.html  help.js
src/modules/logs/: logs.js
src/modules/player/: compare-player.js  player.js  stream-player.js  timeline-player.js  timeline.js
src/modules/queue/: constants.js  queue.js
src/modules/ui/: loading.js  modal.js
src/modules/workflows/: workflows.js
src/styles/: main.css
src/styles/animations/: keyframes.css  transitions.css
src/styles/components/: badges.css  buttons.css  drop-zone.css  empty-states.css  exec-bar.css  forms.css  loading.css  modals.css  scrollbars.css
src/styles/core/: reset.css  typography.css  utilities.css  variables.css
src/styles/graph/: controls.css  graph-zone.css  nodes.css
src/styles/help/: help.css
src/styles/layout/: app-container.css  main-content.css  side-bar.css  top-bar.css
src/styles/logs/: logs-zone.css
src/styles/player/: compare-player.css  player-zone.css  stream-player.css  timeline-player.css  timeline.css  video-controls.css
src/styles/queue/: queue-tab.css  queue-zone.css
src/styles/responsive/: mobile.css  tablet.css
src/styles/workflows/: workflow-icons.css  workflow-list.css
