[package]
name = "FFStudio"
version = "0.2.3"
description = "Visual workflows for FFmpeg"
authors = ["Finoshkin Aleksei"]
edition = "2021"

[package.metadata.deb]
maintainer = "alexeyf.160620@gmail.com"
license-file = ["../LICENSE"]
assets = [
    ["target/release/FFStudio", "/usr/bin/FFStudio", "755"],
    ["icons/icon.png", "/usr/share/pixmaps/ffstudio.png", "644"],
    ["ffstudio.desktop", "/usr/share/applications/ffstudio.desktop", "644"]
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ffstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-bundler = "=2.6.0"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
hyper = { version = "0.14", features = ["full"] }
urlencoding = "2.1"
mime_guess = "2.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.99"
once_cell = "1.21.3"
regex = "1.11.1"
log = "0.4"
env_logger = "0.10"

tauri-plugin-fs = "2.4.2"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-opener = "2"
tauri-plugin-clipboard = "2.1.11"

directories = "6.0.0"
shellwords = "1.1.0" 
glob = "0.3"


[profile.dev]
debug = true
